--- a/tlite.css
+++ b/tlite.css
@@ -2,14 +2,16 @@
   background: black;
   color: white;
   font-family: sans-serif;
-  font-size: 0.8em;
-  padding: 0.75em;
+  font-size: 0.8rem;
+  font-weight: normal;
+  text-decoration: none;
+  padding: 0.75rem;
   border-radius: 4px;
   position: absolute;
   opacity: 0;
   visibility: hidden;
   transition: opacity 0.4s;
-  box-shadow: 0 0.5em 1em -0.5em black;
+  box-shadow: 0 0.5rem 1rem -0.5rem black;
 }
 
 .tlite::before {
