--- a/tlite.css
+++ b/tlite.css
@@ -1,11 +1,12 @@
 .tlite {
-  background: black;
+  background: #111;
   color: white;
   font-family: sans-serif;
   font-size: 0.8rem;
   font-weight: normal;
   text-decoration: none;
-  padding: 0.75rem;
+  text-align: left;
+  padding: 0.6em 0.75rem;
   border-radius: 4px;
   position: absolute;
   opacity: 0;
@@ -14,20 +15,61 @@
   box-shadow: 0 0.5rem 1rem -0.5rem black;
 }
 
-.tlite::before {
-  content: ' ';
-  display: block;
-  background: black;
-  width: 10px;
-  height: 10px;
-  position: absolute;
-  top: -3px;
-  left: 50%;
-  margin-left: -5px;
-  transform: rotate(45deg);
-}
-
 .tlite-visible {
   visibility: visible;
   opacity: 0.9;
+}
+
+.tlite::before {
+  content: ' ';
+  display: block;
+  background: inherit;
+  width: 10px;
+  height: 10px;
+  position: absolute;
+  transform: rotate(45deg);
+}
+
+.tlite-n::before {
+  top: -3px;
+  left: 50%;
+  margin-left: -5px;
+}
+
+.tlite-nw::before {
+  top: -3px;
+  left: 10px;
+}
+
+.tlite-ne::before {
+  top: -3px;
+  right: 10px;
+}
+
+.tlite-s::before {
+  bottom: -3px;
+  left: 50%;
+  margin-left: -5px;
+}
+
+.tlite-se::before {
+  bottom: -3px;
+  right: 10px;
+}
+
+.tlite-sw::before {
+  bottom: -3px;
+  left: 10px;
+}
+
+.tlite-w::before {
+  left: -3px;
+  top: 50%;
+  margin-top: -5px;
+}
+
+.tlite-e::before {
+  right: -3px;
+  top: 50%;
+  margin-top: -5px;
 }
