Fix a bug with draggable elements that have tooltips

--- a/tlite.css
+++ b/tlite.css
@@ -12,7 +12,9 @@
   opacity: 0;
   visibility: hidden;
   transition: opacity 0.4s;
+  white-space: nowrap;
   box-shadow: 0 0.5rem 1rem -0.5rem black;
+  z-index: 1000;
 }
 
 .tlite-visible {
