tiny fix for tooltip usage inside a table

--- a/tlite.css
+++ b/tlite.css
@@ -17,6 +17,12 @@
   z-index: 1000;
 }
 
+/*needs to be place on the table tag when a td or th inside it contains a tooltip*/
+.tlite-table tr td,
+.tlite-table tr th {
+  position: relative;
+}
+
 .tlite-visible {
   visibility: visible;
   opacity: 0.9;
