Add little fix for tlite inside of tables

--- a/tlite.css
+++ b/tlite.css
@@ -17,9 +17,8 @@
   z-index: 1000;
 }
 
-/*needs to be place on the table tag when a td or th inside it contains a tooltip*/
-.tlite-table tr td,
-.tlite-table tr th {
+.tlite-table td,
+.tlite-table th {
   position: relative;
 }
 
